Add DynComp support for JUnit test framework. (#271)
* Add support for JUnit test framework. 
* Add new junit test case.
* remove additional troublesome methods from dcomp-rt
* allow reflective access to sun.util.locale
* update problem package list for java 11
* remove just HotSpot annotations instead of all annotations