@@ -96,9 +96,9 @@ public class Assert {
 		// the following test fails
 		if (Double.isInfinite(expected)) {
 			if (!(expected == actual))
-				failNotEquals(message, new Double(expected), new Double(actual));
+				failNotEquals(message, Double.valueOf(expected), Double.valueOf(actual));
 		} else if (!(Math.abs(expected-actual) <= delta)) // Because comparison with NaN always returns false
-			failNotEquals(message, new Double(expected), new Double(actual));
+			failNotEquals(message, Double.valueOf(expected), Double.valueOf(actual));
 	}
 	/**
 	 * Asserts that two doubles are equal concerning a delta. If the expected
@@ -117,9 +117,9 @@ public class Assert {
 		// the following test fails
 		if (Float.isInfinite(expected)) {
 			if (!(expected == actual))
-				failNotEquals(message, new Float(expected), new Float(actual));
+				failNotEquals(message, Float.valueOf(expected), Float.valueOf(actual));
 		} else if (!(Math.abs(expected-actual) <= delta))
-      		failNotEquals(message, new Float(expected), new Float(actual));
+			failNotEquals(message, Float.valueOf(expected), Float.valueOf(actual));
 	}
 	/**
 	 * Asserts that two floats are equal concerning a delta. If the expected
@@ -133,7 +133,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
 	static public void assertEquals(String message, long expected, long actual) {
-	    assertEquals(message, new Long(expected), new Long(actual));
+	    assertEquals(message, Long.valueOf(expected), Long.valueOf(actual));
 	}
 	/**
 	 * Asserts that two longs are equal.
@@ -146,7 +146,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
 	static public void assertEquals(String message, boolean expected, boolean actual) {
-    		assertEquals(message, new Boolean(expected), new Boolean(actual));
+			assertEquals(message, Boolean.valueOf(expected), Boolean.valueOf(actual));
   	}
 	/**
 	 * Asserts that two booleans are equal.
@@ -159,7 +159,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
   	static public void assertEquals(String message, byte expected, byte actual) {
-		assertEquals(message, new Byte(expected), new Byte(actual));
+		assertEquals(message, Byte.valueOf(expected), Byte.valueOf(actual));
 	}
 	/**
    	 * Asserts that two bytes are equal.
@@ -172,7 +172,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
   	static public void assertEquals(String message, char expected, char actual) {
-    		assertEquals(message, new Character(expected), new Character(actual));
+			assertEquals(message, Character.valueOf(expected), Character.valueOf(actual));
   	}
 	/**
 	 * Asserts that two chars are equal.
@@ -185,7 +185,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
 	static public void assertEquals(String message, short expected, short actual) {
-    		assertEquals(message, new Short(expected), new Short(actual));
+			assertEquals(message, Short.valueOf(expected), Short.valueOf(actual));
 	}
   	/**
 	 * Asserts that two shorts are equal.
@@ -198,7 +198,7 @@ public class Assert {
 	 * an AssertionFailedError is thrown with the given message.
 	 */
   	static public void assertEquals(String message, int expected, int actual) {
-		assertEquals(message, new Integer(expected), new Integer(actual));
+		assertEquals(message, Integer.valueOf(expected), Integer.valueOf(actual));
   	}
   	/**
    	 * Asserts that two ints are equal.
